--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -9,8 +9,8 @@
 \.travis\.yml
 ^revdep$
 ^.*\.old$
-data-raw/results
-^data-raw/results$
+data-raw/results-models
+^data-raw/results-models$
 ^inst/extdata/.*/.*1\d\d.*$
 ^inst/extdata/.*1\d\d.*$
 ^extdata/.*/.*1\d\d.*$
@@ -19,3 +19,4 @@ data-raw/results
 ^inst/extdata/.*2\d[2-9].*$
 ^extdata/.*/.*2\d[2-9].*$
 ^extdata/.*2\d[2-9].*$
+.*_cache$
